deployment/helm-kustomize/environments/dev1/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capwiki-ingress
spec:
  rules:
  - host: dev1-capwiki.corp.capgemini.com
    http:
      paths:
      - backend:
          service:
            name: capwiki-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dev1-capwiki.corp.capgemini.com
    secretName: dev1-capwiki-internal-tls
